--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,10 +45,10 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
-        working-directory: ./sandbox-api
+        working-directory: .
       - run: npm run build --if-present
-        working-directory: ./sandbox-api
+        working-directory: .
       - run: npm run lint --if-present
-        working-directory: ./sandbox-api
+        working-directory: .
       - run: npm test
-        working-directory: ./sandbox-api 
+        working-directory: . 
