--- a/package.json
+++ b/package.json
@@ -31,6 +31,18 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.0",
+    "@apidevtools/swagger-parser": "^10.0.2",
+    "helmet": "^7.0.0",
+    "ioredis": "^5.4.1",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -62,6 +74,10 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/ioredis": "^4.28.7",
+    "@types/helmet": "^0.0.52",
+    "@types/uuid": "^9.0.7"
   }
 }
