--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+app.e2e.json
+app.e2e.spec.ts
